--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ buildscript {
         nav_version = "2.4.1"
         accompanist_version = '0.23.1'
         hilt_version = "2.38.1"
+        viewmodel_version = "2.4.0-rc01"
     }
     repositories {
         google()
