--- a/app/build.gradle
+++ b/app/build.gradle
@@ -88,4 +88,13 @@ dependencies {
     // timber
     implementation 'com.jakewharton.timber:timber:4.7.1'
     implementation "io.coil-kt:coil-compose:1.3.2"
+
+    // room
+    implementation "androidx.room:room-runtime:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+    // optional - Kotlin Extensions and Coroutines support for Room
+    implementation "androidx.room:room-ktx:$room_version"
+
+    // optional - Test helpers
+    testImplementation "androidx.room:room-testing:$room_version"
 }
