--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ buildscript {
         accompanist_version = '0.23.1'
         hilt_version = "2.38.1"
         viewmodel_version = "2.4.0-rc01"
+        room_version = "2.4.2"
     }
     repositories {
         google()
